# sunflow-scores

./: .gitignore  README.md  pyproject.toml  run_validation.py  run_validation.sh  run_validation_denmark.sh  run_validation_denmark_ensemble_median.sh  run_validation_pyranometer.py
notebooks/: validation-hackathon.ipynb
plotting/: plot_daily_scores.py  plot_leadtime_curves.py  plot_leadtime_monthly.py  plot_model_comparison.py  plot_monthly_heatmaps.py  plot_pyranometer_leadtime_scores.py  plot_pyranometer_timeseries.py  plot_seasonal_diurnal_cycles.py
src/sunflow_scores/: __init__.py  dini_loader.py  plot_results.py  plot_utils.py  point_score_calculator.py  pyranometer_loader.py  stations.py  time_alignment.py  validator.py
tests/: test_model_comparison.py  test_point_score_calculator.py  test_pyranometer_loader.py  test_score_computation_resilience.py  test_time_alignment.py  test_validation.py
