[project]
name = "sunflow-scores"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "h5netcdf>=1.8.1",
    "h5py>=3.15.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scores>=1.3.0",
    "xarray>=2026.2.0",
    "zarr>=3.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
